<resources>
    <string name="app_name">CQ</string>
    <string name="action_review">Review</string>
    <string name="action_test">Test</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About this app</string>

    <string name="button_title_next">Next</string>
    <string name="button_title_previous">Previous</string>
    <string name="button_title_help">Help</string>
    <string name="button_title_finish">Finish</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_title_goto">Goto</string>
    <string name="button_title_resume">Resume</string>
    <string name="button_title_restart">Restart</string>
    <string name="button_title_select">Select</string>

    <string name="checkbox_title_impediment">Impediment</string>
    <string name="label_title_index">LK001</string>

    <string name="text_view_title_paper">Android Basic</string>
    <string name="text_view_title_question">What is ADB in android?</string>
    <string name="text_view_title_prompt">Type your message:</string>

    <string name="radio_button_title_choice1">Image tool.</string>
    <string name="radio_button_title_choice2">Development tool.</string>
    <string name="radio_button_title_choice3">Android Debug Bridge.</string>
    <string name="radio_button_title_choice4">None of the above.</string>

    <string name="dialog_title_select_test_sheet">Please select a test sheet</string>

    <string name="message_finished_the_review">Congratulation!!! You have finished the review.</string>
    <string name="message_review_your_mistakes">Would you like to review your mistakes?</string>
    <string name="message_got_full_marks">Congratulation!!! You got full marks.</string>
    <string name="message_your_score_is">Your score is: %1$d of %2$d\n\nWould you like to review your mistakes?</string>
    <string name="message_you_are_right">Correct.</string>
    <string name="message_correct_answer_is">Correct answer is %1$s.</string>
    <string name="message_specify_question_index">Please specify a question index</string>
    <string name="message_invalid_question_index">Invalid question index - \'%1$s\'.</string>
    <string name="message_folder_not_exists">Folder \'%1$s\' does not exist.</string>
    <string name="message_test_sheet_not_found">Could not found test sheet files in \'%1$s\'.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_list_title_storage">Test sheet storage</string>
    <string-array name="pref_list_item_titles_storage">
        <item>Device storage</item>
        <item>SD memory card</item>
    </string-array>
    <string-array name="pref_list_item_values_storage">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_edit_title_questions_per_test">Questions per test</string>
    <string name="pref_edit_default_questions_per_test">25</string>
</resources>
