<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sailing"
    tools:context="org.goldenroute.cq.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/text_view_paper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_title_paper"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:breakStrategy="balanced"
                android:textAlignment="center" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <Button
                    android:id="@+id/button_resume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/button_title_resume"
                    android:textAppearance="@android:style/TextAppearance.Widget.Button"
                    android:textColor="@android:color/holo_orange_dark"
                    android:theme="@style/Widget.AppCompat.Button.Borderless.Colored" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white" />

                <Button
                    android:id="@+id/button_restart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/button_title_restart"
                    android:textAppearance="@android:style/TextAppearance.Widget.Button"
                    android:textColor="@android:color/holo_orange_dark"
                    android:theme="@style/Widget.AppCompat.Button.Borderless.Colored" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white" />

                <Button
                    android:id="@+id/button_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/button_title_select"
                    android:textAppearance="@android:style/TextAppearance.Widget.Button"
                    android:textColor="@android:color/holo_orange_dark"
                    android:theme="@style/Widget.AppCompat.Button.Borderless.Colored" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
